# Spherical-Harmonic-Gravity

./: .gitignore  CALCULATORS.md  CMakeLists.txt  LICENSE  README.md  build_python.sh  requirements.txt  setup.py  test_python_shg.py
build-release/: .ninja_deps  .ninja_log  EGM2008ProfileAccel  EGM2008ProfilePotential  EGM2008ProfileRunner  EGM2008RegressionTest  GravityCalc  PotentialCalc  build.ninja
cmake/: SHGConfig.cmake.in
examples/: earth_gravity_visualization.py  gravity_anomalies_high_fidelity_data.csv  gravity_anomalies_high_fidelity_data.npz  load_gravity_data_demo.py
include/: SHG.hpp  SHG.tpp
pyshg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/: README.md  example_usage.py  shg_python.cpp
src/: Demo.cpp  SHG.cpp  egm2008_gravity_calc.cpp  egm2008_potential_calc.cpp  main.cpp
tests/: egm2008_generate_baseline.cpp  egm2008_profile_accel.cpp  egm2008_profile_potential.cpp  egm2008_profile_runner.cpp  egm2008_regression_baseline.csv  egm2008_regression_ctest.cpp  egm2008_thread_safety_ctest.cpp  egm2008_workspace_toggle_ctest.cpp
